--- a/mregisterforcustomer.html
+++ b/mregisterforcustomer.html
@@ -83,7 +83,7 @@ a {
 .signin {
     padding: 0px;
     margin-top: 0px;
-  background-color: ;
+  background-color: transparent;
   text-align: center;
 }
     </style>
